实现指定圈子的帖子查看

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="add_circle_contnet">添加内容</string>
     <string name="add_circle_desc">添加合适的圈子会有更多的赞哦～</string>
     <string name="forum_tips">在这里你可以:\n1.分享健身相关一二事\n2.交流,吐槽解压\n......</string>
-    <string name="tips_init_content">这是一个很长很长很长很很长的帖子</string>
+    <string name="tips_init_content">这是一个很长很长很长很很长很长很很长的帖子</string>
 
     <!--  dialog  -->
     <string name="ok">确认</string>
